--- a/http-server-master/http-server-master/HttpServer/wwwroot/index.html
+++ b/http-server-master/http-server-master/HttpServer/wwwroot/index.html
@@ -123,13 +123,12 @@
 <body>
 
     <div class="header">
-        <h1>努力学习的少年的个人博客</h1>
+        <h1>GH,YYC,XQ:HTTPSERVER</h1>
         <div class="topnav">
             <a href="dir1/photo.html" targrt="_blank">自拍照</a>
-            <a href="https://blog.csdn.net/sjp11?spm=1000.2115.3001.5343" target="_blank">csdn博客</a>
+            <a href="https://github.com/patickG/Httpserver-c-/edit/main/http-server-master" target="_blank">GITHUB博客</a>
             <a href="cal.html" target="_blank">计算器</a>
             <a href="#">个人计划表</a>
-            <a href="https://gitee.com/ target="_blank">码云</a>
 
         </div>
     </div>
